# ai-newsletter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
.github/workflows/: daily_pipeline.yml
app/: config.py  curator.py  database.py  emailer.py  main.py  models.py  processor.py
app/scraper/: orchestrator.py  rss_scraper.py  scraper_anthropic.py  scraper_openai.py
app/templates/: digest.html
backend/: Dockerfile  get_gmail_token.py  pyproject.toml  start.sh  test_email_output.html  test_full_pipeline.py
backend/app/: api.py  config.py  curator.py  database.py  email_service.py  main.py  processor.py
backend/app/templates/: digest.html  welcome.html
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: Navbar.tsx
frontend/src/app/unsubscribe/: page.tsx
